[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/leaf.png" type="Texture" id=1]
[ext_resource path="res://environments/Leaf.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 17 )

[node name="Leaf" type="StaticBody2D"]
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -7 )
shape = SubResource( 2 )

[node name="AvailabilityTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="AvailabilityTimer" to="." method="_on_AvailabilityTimer_timeout"]
